codama-macros/tests/codama_attribute/values_nodes/argument_value_node/missing_name.fail.stderr
error: expected a list: `argument(...)` or `argument = (...)`
 --> tests/codama_attribute/values_nodes/argument_value_node/missing_name.fail.rs:3:26
  |
3 | #[codama(default_value = argument)]
  |                          ^^^^^^^^

error: name is missing
 --> tests/codama_attribute/values_nodes/argument_value_node/missing_name.fail.rs:6:26
  |
6 | #[codama(default_value = argument())]
  |                          ^^^^^^^^^^
