codama-macros/tests/codama_attribute/values_nodes/argument_value_node/missing_name.fail.rs
use codama_macros::codama;

#[codama(default_value = argument)]
pub struct Test;

#[codama(default_value = argument())]
pub struct TestWithBraces;

fn main() {}
